<?xml version="1.0"?>
<package format="2">
  <name>example_recovery</name>
  <version>0.0.1</version>
  <description>The example_recovery package</description>

  <author email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</author>
  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
      <nav_core plugin="${prefix}/example_plugin.xml" />
  </export>
</package>
